# machine-learning

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_api.py
notebooks/: create_scaler.py  predictive_maintenance_new.csv
notebooks/1_MTL_Daffa/: 1_MTL_Keras_ReluSigmoid.ipynb  note.md  predictive_maintenance.h5
src/: .dockerignore  Dockerfile  server.py
src/controllers/: __init__.py  failure_prediction.controller.py  failure_prediction_controller.py
src/models/: __init__.py  binaryfailure.keras  model.py  multiclassfailtype.keras  scaler.pkl
src/notebooks/: 2_binary+multi_keras_relusigmoid.py
src/services/: __init__.py  failure_prediction.py
