[project]
name = "machine-learning"
version = "0.1.0"
description = "Sigma-D Machine Learning Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.120.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "uvicorn>=0.38.0",
]
